# ParticleSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cachegrind.out.1956330  code_stype.txt  compile_commands.json  compile_flags.txt  todo.txt
data/input/debug/: config.ini
data/input/release/: config.ini
data/output/: execution_data_10002s  execution_data_1029s  execution_data_10s  execution_data_1101s  execution_data_1125s  execution_data_117s  execution_data_1206s  execution_data_1209s  execution_data_122s  execution_data_1257s  execution_data_12s  execution_data_136s  execution_data_1373s  execution_data_1378s  execution_data_1380s  execution_data_1398s  execution_data_1410s  execution_data_144s  execution_data_153s  execution_data_1551s  execution_data_1557s  execution_data_1611s  execution_data_1623s  execution_data_162s  execution_data_1635s  execution_data_164s  execution_data_1671s  execution_data_1698s  execution_data_1731s  execution_data_1770s  execution_data_1776s  execution_data_1779s  execution_data_179s  execution_data_17s  execution_data_1912s  execution_data_195s  execution_data_1991s  execution_data_199s  execution_data_19s  execution_data_1s  (+249 more)
docs/: ReadMe.md
include/Containers/: README.md  ndtree.hpp  ntree.hpp  todo.txt  tree_testing.cpp
include/DataLoggers/: csv_logger.hpp
include/PhysicalModel/: energy.hpp  expression_templates.hpp  factory.hpp  interaction_type.hpp  magnitude_definitions.hpp  notes.txt  particle.hpp  particle_concepts.hpp  particle_interaction.hpp  particle_systems.hpp  physical_constants.hpp  physical_magnitudes.hpp  physical_models.hpp  physical_vector.hpp  solar_system.hpp  test.cpp  unit_system.hpp  utils.hpp
include/Plotting/: plotting.cpp  plotting.hpp  plotting_main.delete  scatter_plot.cpp  scatter_plot.hpp  scatter_plot_2D.hpp  scatter_plot_3D.hpp  series_plot_2D.hpp  time_plot_2D.hpp  time_plotter.cpp  time_plotter.hpp
include/Simulation/: barnes_hut_approximation.hpp  brute_force.hpp  simulation_config.hpp
include/SimulationLogging/: csv_logger.hpp
include/Solvers/: leapfrog.hpp  odex2.hpp  runge_kutta.hpp  yoshida.hpp
include/Timing/: synthetic_clock.hpp
include/Utility/: casts.hpp  composable_function.hpp  concepts.hpp  error_handling.hpp  generator.hpp  generics.hpp  logging.hpp  random.hpp  random_distributions.hpp
src/: main.cpp
tests/: README.md  ndtree_tests.cpp  particle_factory.hpp  physical_interaction_tests.cpp  simulation_tests.cpp  test.cpp  tests.cpp  todo.txt  vector_operations_tests.cpp
